--- a/_posts/2021-02-15-프로그래머스 - 124 나라의숫자.md
+++ b/_posts/2021-02-15-프로그래머스 - 124 나라의숫자.md
@@ -2,9 +2,7 @@
 layout: post
 title: 프로그래머스 - 124 나라의 숫자
 date: 2021-02-15 18:30:00 +0900
-category: 
-    - programmers
-    - c++
+categories: programmers
 ---
 
 ### 문제 난이도
