--- a/_posts/2021-02-15-프로그래머스_124나라의숫자.md
+++ b/_posts/2021-02-15-프로그래머스_124나라의숫자.md
@@ -2,7 +2,7 @@
 layout: post
 title: 프로그래머스 - 124 나라의 숫자
 date: 2021-02-15 18:30:00 +0900
-categories: programmers
+category: programmers
 ---
 
 ### 문제 난이도
@@ -55,5 +55,5 @@ string solution(int n) {
 }
 ```
 
-##### 문제 출처
+### 문제 출처
 [프로그래머스 124 나라의 숫자](https://programmers.co.kr/learn/courses/30/lessons/12899)
