--- a/_posts/2021-02-16-프로그래머스_H-Index.md
+++ b/_posts/2021-02-16-프로그래머스_H-Index.md
@@ -2,7 +2,7 @@
 layout: post
 title: 프로그래머스 - H-Index
 date: 2021-02-16 20:22:00 +0900
-categories: programmers
+category: programmers
 ---
 
 ### 문제 난이도
