--- a/_posts/2021-02-14-첫포스팅.md
+++ b/_posts/2021-02-14-첫포스팅.md
@@ -12,8 +12,7 @@ category: daily
 markdown을 이용해서 깃허브 블로그를 만들어보았습니다.  
 생각보다 재미있어서 앞으로 여러 정보 글들을 올릴 것 같습니다.  
 프로그래머스 문제 리뷰나 게임 리뷰등을 올릴 예정이고 댓글 기능도 조만간 올리도록 하겠습니다.  
-끝으로 제 스팀 닉네임과 좋아하는 만화인 슬램덩크 명언 하나 올리겠습니다.  
+끝으로 좋아하는 만화인 슬램덩크 명언 하나 올리겠습니다.  
 <br/><br/>
 
-![](/public/img/steam.png)  
 ![](/public/img/123.jpg)
