--- a/_posts/2021-02-20-프로그래머스_캐시.md
+++ b/_posts/2021-02-20-프로그래머스_캐시.md
@@ -29,7 +29,7 @@ level 2
 - cache miss일 경우 실행시간은 5이다.
 
 ### 문제 풀이
-LRU 알고리즘에 대해 알고 있다면 쉽게 문제를 해결 할 수 있다. LRU 알고리즘은 간단히 설명하자면 페이지 교체 알고리즘의 일종으로 가장 오랫동안 참조되지 않은 페이지를 교체하는 기법이다. 이번 문제같은 경우는 캐시를 교체하게 된다.  
+LRU 알고리즘에 대해 알고 있다면 쉽게 문제를 해결 할 수 있다. LRU 알고리즘은 간단히 설명하자면 페이지 교체 알고리즘의 일종으로 가장 오랫동안 참조되지 않은 페이지를 교체하는 기법이다. 이번 문제의 핵심이다. 
 나는 이러한 방식을 queue를 이용하여 해결할려고 했었다. 그러나 큐를 이용하게 되면 중간에 위치한 value들에 접근하기가 쉽지 않아 queue보다 쉽게 value들에 접근할 수 있는 deque를 이용하였다. 우선 모든 대문자들을 소문자로 바꾸어 구분을 없애주고 cacheSize 크기의 deque에 차례대로 value들을 넣어주면서 LRU 알고리즘 방식에 맞게 value를 교체해주었다. 교체를 해주면서 value값이 중복되면 cache hit이므로 answer += 1, 중복되지 않으면 cache miss이므로 answer += 5를 해주면서 실행시간을 구해냈다.
 
 
