--- a/_posts/programmers/2021-02-16-프로그래머스_H-Index.md
+++ b/_posts/programmers/2021-02-16-프로그래머스_H-Index.md
@@ -1,7 +1,7 @@
 ---
 comments: true
 layout: post
-title: 프로그래머스 - H-Index
+title: 프로그래머스 - H-Index - C++
 date: 2021-02-16 20:22:00 +0900
 category: programmers
 ---
