--- a/_posts/programmers/2021-02-18-프로그래머스_괄호변환.md
+++ b/_posts/programmers/2021-02-18-프로그래머스_괄호변환.md
@@ -1,7 +1,7 @@
 ---
 comments: true
 layout: post
-title: 프로그래머스 - 괄호 변환 (2020 KAKAO BLIND RECRUITMENT)
+title: 프로그래머스 - 괄호 변환 (2020 KAKAO BLIND RECRUITMENT) - C++
 date: 2021-02-18 17:45:00 +0900
 category: programmers
 ---
