--- a/_posts/programmers/2021-02-17-프로그래머스_가장큰정사각형찾기.md
+++ b/_posts/programmers/2021-02-17-프로그래머스_가장큰정사각형찾기.md
@@ -1,7 +1,7 @@
 ---
 comments: true
 layout: post
-title: 프로그래머스 - 가장 큰 정사각형 찾기
+title: 프로그래머스 - 가장 큰 정사각형 찾기 - C++
 date: 2021-02-17 15:00:00 +0900
 category: programmers
 ---
