--- a/_posts/go/2021-03-01-golang-03.md
+++ b/_posts/go/2021-03-01-golang-03.md
@@ -6,7 +6,7 @@ date: 2021-03-01 17:10:00 +0900
 category: go
 ---
 
-### BankAccount Simulation
+### BankAccount project
 ```go
 package accounts
 
@@ -45,7 +45,7 @@ func (a *Account) Withdraw(amount int) error {
 		return errnoMoney
 	}
 	a.balance -= amount
-	return nil
+	return nil		//nil = null, err no exist
 }
 
 // ChangeOnwer of the account
