--- a/_posts/go/2021-03-01-golang-03.md
+++ b/_posts/go/2021-03-01-golang-03.md
@@ -1,7 +1,7 @@
 ---
 comments: true
 layout: post
-title: Go - 02. Bank
+title: Go - 02. BankAccount project
 date: 2021-03-01 17:10:00 +0900
 category: go
 ---
