--- a/_posts/go/2021-03-01-golang-04.md
+++ b/_posts/go/2021-03-01-golang-04.md
@@ -1,7 +1,7 @@
 ---
 comments: true
 layout: post
-title: Go - 02. Bank
+title: Go - 03. Dictionary project
 date: 2021-03-01 23:35:00 +0900
 category: go
 ---
