--- a/_posts/daily/2021-02-14-첫포스팅.md
+++ b/_posts/daily/2021-02-14-첫포스팅.md
@@ -16,5 +16,5 @@ markdown을 이용해서 깃허브 블로그를 만들어보았습니다.
 끝으로 좋아하는 만화인 슬램덩크 명언 하나 올리겠습니다.  
 <br/><br/>
 
-![](/public/img/123.jpg)
+<!-- ![](/public/img/123.jpg) -->
 <br/><br/><br/><br/><br/><br/><br/><br/>
