--- a/_posts/daily/2021-03-03-210303주저리.md
+++ b/_posts/daily/2021-03-03-210303주저리.md
@@ -18,6 +18,6 @@ category: daily
 Team Samoyed는 얼마전에 알았는데 내가 가입해 있는 페이스북의 그륩 인디라의 회원 분이었는데 개발 인원이 두 명으로 형제가 대략 1년동안 이 게임을 제작했다고 한다. 정말 대단하고 존경스럽다고 생각했다. 인디 게임 시장이 많이 활성화되어 이러한 게임들이 많이 나와주었으면 좋겠다.  
 마지막으로 이 게임의 트레일러를 올리고 오늘의 주저리를 마무리하겠다.
 <br/><br/><br/><br/><br/>
-<iframe width="1024" height="576" src="https://www.youtube.com/embed/3tO1W1qqUVI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<!-- <iframe width="1024" height="576" src="https://www.youtube.com/embed/3tO1W1qqUVI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 
 <br/><br/><br/><br/><br/><br/><br/><br/>
