--- a/_posts/error/2022-09-20-SQL_Error_1064_해결.md
+++ b/_posts/error/2022-09-20-SQL_Error_1064_해결.md
@@ -3,7 +3,7 @@ comments: true
 layout: post
 title: SQL Error 1064 해결
 date: 2022-09-20 00:42:00 +0900
-category: etc
+category: error
 ---
 
 클래스 이름이 hibernate 자동 생성 키워드와 같을 시 발생하는 오류이다.
