Update 가장 어두운 순간이 지나야 새벽이 온다._블로그글.md

--- a/_posts/2025/가장 어두운 순간이 지나야 새벽이 온다._블로그글.md
+++ b/_posts/2025/가장 어두운 순간이 지나야 새벽이 온다._블로그글.md
@@ -3,7 +3,7 @@ comments: true
 layout: post
 title: 가장 어두운 순간이 지나야 새벽이 온다.에 대한 블로그 글
 date: 2025-02-19 22:23:22 +0900
-category: project
+category: 2025
 ---
 
 # 가장 어두운 순간이 지나야 새벽이 온다: 희망의 메시지
