--- a/_posts/2025/2025-02-19-궁핍은 영혼과 정신을 낳고, 불행은 위대한 인물을 낳는다._블로그글.md
+++ b/_posts/2025/2025-02-19-궁핍은 영혼과 정신을 낳고, 불행은 위대한 인물을 낳는다._블로그글.md
@@ -3,7 +3,7 @@ comments: true
 layout: post
 title: 궁핍은 영혼과 정신을 낳고, 불행은 위대한 인물을 낳는다.에 대한 블로그 글
 date: 2025-02-19 22:05:41 +0900
-category: project
+category: 2025
 ---
 
 # 궁핍은 영혼과 정신을 낳고, 불행은 위대한 인물을 낳는다
