--- a/_posts/2025/2025-02-19-나는 항상 나의 최고의 걸작을 향해 나아가고 있다._블로그글.md
+++ b/_posts/2025/2025-02-19-나는 항상 나의 최고의 걸작을 향해 나아가고 있다._블로그글.md
@@ -3,7 +3,7 @@ comments: true
 layout: post
 title: 나는 항상 나의 최고의 걸작을 향해 나아가고 있다.에 대한 블로그 글
 date: 2025-02-19 22:12:59 +0900
-category: project
+category: 2025
 ---
 
 # 나는 항상 나의 최고의 걸작을 향해 나아가고 있다
