--- a/_posts/2025/2025-02-19-늘 갈망하고 우직하게 나아가라._블로그글.md
+++ b/_posts/2025/2025-02-19-늘 갈망하고 우직하게 나아가라._블로그글.md
@@ -3,7 +3,7 @@ comments: true
 layout: post
 title: 늘 갈망하고 우직하게 나아가라.에 대한 블로그 글
 date: 2025-02-19 21:56:50 +0900
-category: project
+category: 2025
 ---
 
 # 늘 갈망하고 우직하게 나아가라: 끊임없는 열정과 꾸준함의 힘
