--- a/_posts/2025/2025-02-19-당신의 시간은 제한되어 있습니다. 다른 사람의 인생을 사느라 시간을 낭비하지 마세요._블로그글.md
+++ b/_posts/2025/2025-02-19-당신의 시간은 제한되어 있습니다. 다른 사람의 인생을 사느라 시간을 낭비하지 마세요._블로그글.md
@@ -3,7 +3,7 @@ comments: true
 layout: post
 title: 당신의 시간은 제한되어 있습니다. 다른 사람의 인생을 사느라 시간을 낭비하지 마세요.에 대한 블로그 글
 date: 2025-02-19 22:05:52 +0900
-category: project
+category: 2025
 ---
 
 # 당신의 시간은 제한되어 있습니다. 다른 사람의 인생을 사느라 시간을 낭비하지 마세요.
