--- a/_posts/2025/2025-02-19-매일을 인생의 마지막 날처럼 산다면 언젠가는 의인이 되어있을 것이다._블로그글.md
+++ b/_posts/2025/2025-02-19-매일을 인생의 마지막 날처럼 산다면 언젠가는 의인이 되어있을 것이다._블로그글.md
@@ -3,7 +3,7 @@ comments: true
 layout: post
 title: 매일을 인생의 마지막 날처럼 산다면 언젠가는 의인이 되어있을 것이다.에 대한 블로그 글
 date: 2025-02-19 22:21:03 +0900
-category: project
+category: 2025
 ---
 
 # 매일을 인생의 마지막 날처럼 산다면, 언젠가는 의인이 되어있을 것이다
