--- a/_posts/2025/2025-02-19-미래는 전기에 달려 있다._블로그글.md
+++ b/_posts/2025/2025-02-19-미래는 전기에 달려 있다._블로그글.md
@@ -3,7 +3,7 @@ comments: true
 layout: post
 title: 미래는 전기에 달려 있다.에 대한 블로그 글
 date: 2025-02-19 22:02:21 +0900
-category: project
+category: 2025
 ---
 
 # 미래는 전기에 달려 있다: 전기 혁명이 가져올 변화
