--- a/_posts/2025/2025-02-19-불가능이라는 단어는 단지 이 세상에 있는 단어일 뿐, 내 사전에 없다._블로그글.md
+++ b/_posts/2025/2025-02-19-불가능이라는 단어는 단지 이 세상에 있는 단어일 뿐, 내 사전에 없다._블로그글.md
@@ -3,7 +3,7 @@ comments: true
 layout: post
 title: 불가능이라는 단어는 단지 이 세상에 있는 단어일 뿐, 내 사전에 없다.에 대한 블로그 글
 date: 2025-02-19 22:12:37 +0900
-category: project
+category: 2025
 ---
 
 # 불가능이라는 단어는 단지 이 세상에 있는 단어일 뿐, 내 사전에 없다
