--- a/_posts/2025/2025-02-19-상상력은 지식보다 중요하다. 지식은 한계가 있지만 상상력은 세상의 모든 것을 품는다._블로그글.md
+++ b/_posts/2025/2025-02-19-상상력은 지식보다 중요하다. 지식은 한계가 있지만 상상력은 세상의 모든 것을 품는다._블로그글.md
@@ -3,7 +3,7 @@ comments: true
 layout: post
 title: 상상력은 지식보다 중요하다. 지식은 한계가 있지만 상상력은 세상의 모든 것을 품는다.에 대한 블로그 글
 date: 2025-02-19 22:18:28 +0900
-category: project
+category: 2025
 ---
 
 # 상상력은 지식보다 중요하다: 무한한 가능성의 세계
