--- a/_posts/2025/2025-02-19-어떤 진리라도 그것을 밝히는 자는 항상 외로움을 견뎌야 한다._블로그글.md
+++ b/_posts/2025/2025-02-19-어떤 진리라도 그것을 밝히는 자는 항상 외로움을 견뎌야 한다._블로그글.md
@@ -3,7 +3,7 @@ comments: true
 layout: post
 title: 어떤 진리라도 그것을 밝히는 자는 항상 외로움을 견뎌야 한다.에 대한 블로그 글
 date: 2025-02-19 22:12:44 +0900
-category: project
+category: 2025
 ---
 
 # 진리를 밝히는 자의 외로움: 그 당위성과 고독의 의미
