--- a/_posts/2025/2025-02-19-언어의 한계가 곧 자기 세계의 한계다._블로그글.md
+++ b/_posts/2025/2025-02-19-언어의 한계가 곧 자기 세계의 한계다._블로그글.md
@@ -3,7 +3,7 @@ comments: true
 layout: post
 title: 언어의 한계가 곧 자기 세계의 한계다.에 대한 블로그 글
 date: 2025-02-19 22:05:29 +0900
-category: project
+category: 2025
 ---
 
 # 언어의 한계가 곧 자기 세계의 한계다: 우리가 말하는 것의 힘
