--- a/_posts/2025/2025-02-19-일찍 자고 일찍 일어나는 것이 건강, 부, 그리고 지혜의 비결이다._블로그글.md
+++ b/_posts/2025/2025-02-19-일찍 자고 일찍 일어나는 것이 건강, 부, 그리고 지혜의 비결이다._블로그글.md
@@ -3,7 +3,7 @@ comments: true
 layout: post
 title: 일찍 자고 일찍 일어나는 것이 건강, 부, 그리고 지혜의 비결이다.에 대한 블로그 글
 date: 2025-02-19 21:59:54 +0900
-category: project
+category: 2025
 ---
 
 # 일찍 자고 일찍 일어나는 것이 건강, 부, 그리고 지혜의 비결이다
