--- a/_posts/2025/2025-02-19-나는 배운게 없기 때문에 모르는게 없다._블로그글.md
+++ b/_posts/2025/2025-02-19-나는 배운게 없기 때문에 모르는게 없다._블로그글.md
@@ -3,7 +3,7 @@ comments: true
 layout: post
 title: 나는 배운게 없기 때문에 모르는게 없다.에 대한 블로그 글
 date: 2025-02-19 22:15:15 +0900
-category: project
+category: 2025
 ---
 
 # 나는 배운 게 없기 때문에 모르는 게 없다: 무지의 미학
