--- a/_posts/2025/2025-02-19-뒤돌아 보지 마라. 중요한 것은 미래다._블로그글.md
+++ b/_posts/2025/2025-02-19-뒤돌아 보지 마라. 중요한 것은 미래다._블로그글.md
@@ -3,7 +3,7 @@ comments: true
 layout: post
 title: 뒤돌아 보지 마라. 중요한 것은 미래다.에 대한 블로그 글
 date: 2025-02-19 22:08:10 +0900
-category: project
+category: 2025
 ---
 
 # "뒤돌아 보지 마라! 중요한 것은 미래다"
