--- a/_posts/2025/2025-02-19-모든 아이는 예술가다. 문제는 성인이 된 후에도 어떻게 예술가로 남을 수 있는가이다._블로그글.md
+++ b/_posts/2025/2025-02-19-모든 아이는 예술가다. 문제는 성인이 된 후에도 어떻게 예술가로 남을 수 있는가이다._블로그글.md
@@ -3,7 +3,7 @@ comments: true
 layout: post
 title: 모든 아이는 예술가다. 문제는 성인이 된 후에도 어떻게 예술가로 남을 수 있는가이다.에 대한 블로그 글
 date: 2025-02-19 22:12:50 +0900
-category: project
+category: 2025
 ---
 
 # 모든 아이는 예술가다: 성인이 된 후에도 예술가로 남는 방법
