--- a/_posts/2025/2025-02-19-진에어_블로그글.md
+++ b/_posts/2025/2025-02-19-진에어_블로그글.md
@@ -3,7 +3,7 @@ comments: true
 layout: post
 title: 진에어에 대한 블로그 글
 date: 2025-02-17 21:33:27 +0900
-category: project
+category: 2025
 ---
 
 # 진에어: 저비용 항공사의 매력과 여행의 즐거움
