--- a/_posts/2025-10/2025-10-31-델리리그비비튠.md
+++ b/_posts/2025-10/2025-10-31-델리리그비비튠.md
@@ -95,7 +95,7 @@ category: 2025-10
 
 ​
 
-![델리리그비비튠](http://shop1.phinf.naver.net/20251021_150/1761012058877vJIla_JPEG/6969132697247561_58781293.jpg)
+![델리리그비비튠](https://is3-ssl.mzstatic.com/image/thumb/Music124/v4/2b/2d/fd/2b2dfdea-7c08-1ca9-c7cb-6a6f7e093228/00602567823858.rgb.jpg/1200x630wp-60.jpg)
 
 <br><br>
 
