--- a/_posts/2025-10/2025-10-31-라비쉬앳홈.md
+++ b/_posts/2025-10/2025-10-31-라비쉬앳홈.md
@@ -167,7 +167,7 @@ category: 2025-10
 
 ---
 
-![라비쉬앳홈](http://shop1.phinf.naver.net/20240925_11/1727252688073RQwjS_JPEG/6405140208427617_580606210.jpg)
+![라비쉬앳홈](https://thumbnail.coupangcdn.com/thumbnails/remote/492x492ex/image/vendor_inventory/1b6e/00ffee85503d1fe579c9a56cb295e0da62a7f9e81aa9208b729a9ba3ab1a.png)
 
 <br><br>
 
