--- a/_posts/2025-10/2025-10-31-에그돔.md
+++ b/_posts/2025-10/2025-10-31-에그돔.md
@@ -68,7 +68,7 @@ category: 2025-10
 
 처음 중국 직구에 익숙하지 않거나 중국어가 어려운 분은 구매대행을 이용하는 것이 편리하고, 수수료를 감안해도 큰 부담이 아닙니다. 반면에 경험이 많고 비용 절감이 목적이라면 직접 수입 방식을 추천합니다.
 
-![에그돔](http://shop1.phinf.naver.net/20251022_111/176113909108079xsx_JPEG/95271952206146993_461668576.jpg)
+![에그돔](https://shop-phinf.pstatic.net/20251027_120/1761527038192V6YWa_JPEG/894281409834340_1092512685.jpg)
 
 <br><br>
 
